完善代码判断功能
