# router/app.go
@@ -32,7 +32,7 @@ func Router() *gin.Engine {
 	r.GET("/submit-list", service.GetSubmitList)
 
 	//管理员私有方法
-	authAdmin := r.Group("/admin", middlewares.AuthAdmin())
+	authAdmin := r.Group("/admin", middlewares.AuthAdminCheck())
 	//问题创建
 	authAdmin.POST("/problem-create", service.ProblemCreate)
 	//问题修改
@@ -45,6 +45,10 @@ func Router() *gin.Engine {
 	authAdmin.DELETE("/category-delete", service.CategoryDelete)
 	//分类更改
 	authAdmin.PUT("/category-modify", service.CategoryModify)
+
+	//用户私有方法
+	authUser := r.Group("/user", middlewares.AuthUserCheck())
+	authUser.POST("/submit", service.Submit)
 
 	return r
 }
